Bug 127148 - Selectable text and links in dialogs don't have indication of focused state
Summary: Selectable text and links in dialogs don't have indication of focused state
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-08-25 13:51 UTC by Mike Kaganski
Modified: 2020-06-07 18:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-08-25 13:51:56 UTC
1. Open Help->About; the Close button is active (has a rectangle showing that).
2. Press Tab several times
2.1. After first press, there's no indication which control has focus now (it's actually "Version:" text box, and it's now possible to use cursor keys and Shift/Control to select text, and Ctrl+C).
2.2. After second press, there's still no indication (now the "See Log:" link is active, and Enter would open the link in browser).

It would be good to have the text in a selected text box to be either pre-selected on activation (which would allow to use Ctrl+C right away); or cursor (vertical bar) shown and blinking indicating the focus; or at least a focus rectangle shown.

The link seems to *try* drawing dotted focus indicator (visible as blinking if one presses and holds Tab button to constantly move focus between controls) - looks like some sort of regression which owerdraws the already drawn indication.

Tested with Version: 6.4.0.0.alpha0+ (x64)
Build ID: b26a3db534cd30bee596670e99897ee5ce907adf
CPU threads: 12; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 1 Xisco Faulí 2019-12-11 17:00:26 UTC
Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: b9d6ea1dd7541c4bd866571f9e3f0aa894687c07
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-12-11 17:03:49 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-09-19 15:35:36 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-20 09:56:15 +0200
commit da9a539999fc8ae47a78542ce646005f3a9be868 (patch)
tree 955f1361b5379da8bf24ab23e4cabdc3dc260745
parent 3f73733f7df6393be773e66e445eb0a86e9a9377 (diff)
use can-focus for TB_TABSTOP|WB_NOTABSTOP, not editable

https://cgit.freedesktop.org/libreoffice/core/commit/?id=da9a539999fc8ae47a78542ce646005f3a9be868

Bisected with: bibisect-linux64-6.2 

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2019-12-11 20:44:19 UTC
The link issue half of this is a regression from...

commit 7eb37a422f2e66bc177d72404c53659a248661ca
Date:   Mon Aug 12 11:35:51 2019 +0200

    tdf#118856 vcl: avoid flicker in the about dialog

the RequestDoubleBuffering line in vcl/source/window/aboutdialog.cxx does "flickering" under windows return if that's removed ?
Comment 4 Caolán McNamara 2019-12-11 20:45:03 UTC
by which I mean its just this dialog has an issue with links, not the rest of them
Comment 5 MarjaE 2019-12-12 20:55:53 UTC
> or cursor (vertical bar) shown and blinking indicating the focus;

Blinking cursors can be blinding migraine triggers. Standard LibreOffice for Mac does not allow users to disable these cursors. LibreOffice for Windows is not supported in WINE. At this point I use a combination of NeoOffice and LibreOffice NBC.

As long as there's no way for Mac users to disable these cursors, some of us won't be able to see the dialogues with these cursors.

If we can disable these cursors, we won't be able to see the focus.

A non-blinking focus rectangle may be a better option.
Comment 6 Caolán McNamara 2019-12-13 15:57:38 UTC
I imagine what the bisect picked up on was that before da9a539999fc8ae47a78542ce646005f3a9be868 the textview widget was skipped in the tab order if it was readonly, which isn't something I'd like to change back to. We could turn off can-focus in aboutbox.ui for version if we wanted to go back to skipping the widget in the tab traversal.

I feel we do want to be able to tab into it, but want some visual feedback we're in there and ideally select all for easy copy and paste
Comment 7 Commit Notification 2019-12-14 19:15:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/504d9e75f663497e7ba08ea4124c8a1b06d658ce

tdf#127148 select-all on tabbing into version box in help->about

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-12-16 06:21:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/8de197a982f6b588ee65ab5e2f4bdb879e73e51f

tdf#127148 select-all on tabbing into version box in help->about

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2020-01-20 14:24:00 UTC
A polite ping to Caolán McNamara:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks
Comment 10 Caolán McNamara 2020-01-20 17:35:43 UTC
Currently the version box now gives a visual indication that it has the focus, but the link button focus is still mis-rendered IIUC
Comment 11 Caolán McNamara 2020-06-07 18:25:34 UTC
I think with the new help dialog the issue is moot now