tdf#127148 select-all on tabbing into version box in help->about

and allow select-all in readonly multiline edits too.

Arguably this might be a universal settings, but just enable it
for the about dialog for now.

Change-Id: Ic2e64fe26593adf4ae630d1be1a7b196a5a0216c
Reviewed-on: https://gerrit.libreoffice.org/85127
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>